Correct cursor for expand/collapse in all convo view

--- a/public/stylesheets/client/all_convos.less
+++ b/public/stylesheets/client/all_convos.less
@@ -33,6 +33,7 @@
 				padding: 15px 0;
 				font-size: 15px;
 				color: @blue;
+				cursor: pointer;
 			}
 
 			.info {
